# CppBindings

./: CMakeLists.txt  simpleTest.cpp
bindings/: CMakeLists.txt  IXmlBinding.hpp  TXmlFieldBinding.hpp  TXmlIO.cpp  TXmlIO.hpp  TXmlParentBinding.hpp  bindings.hpp
tinyxml/: CMakeLists.txt
